# rustid

./: .editorconfig  .gitignore  .mailmap  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  DOS.md  LICENSE  Makefile  README.md  build.rs  i386-dos.json  i386-dos32a.json  i486-dos.json  i486-linux-musl.json  i486-linux.json  i486-unknown-linux-musl.json  justfile  link-dos32a.x  link-exe.x  link.x
.cargo/: config.toml
.github/workflows/: push.yml  release.yml
examples/: 2PPRO.TXT  6X86.TXT  6X86L.TXT  C2.TXT  C6.TXT  CRUSOE.TXT  EKABINI.TXT  GEODELX.TXT  K5.TXT  K6-2.TXT  K6-III.TXT  K6.TXT  K7GEODE.TXT  KIRIN.TXT  LYNX.TXT  MEDIAGX.TXT  MII.TXT  NANOX2.TXT  NSGEODE.TXT  RAPIDCAD.TXT  SSA5.TXT  U5S.TXT  VORTEX86.TXT  W2A.TXT  W2B.TXT  a18pro.txt  nano.txt  piledriver.txt
raw/: 5900XT.txt  m3-8100y.txt  tm5700.txt
src/: cpuid.rs  debug.rs  dos.rs  dos_debug.rs  dos_dump.rs  dos_rustid.rs  dump.rs  lib.rs  main.rs  rustid.rs
src/arm/: apple.rs  brand.rs  cpu.rs  features.rs  fns.rs  linux.rs  micro_arch.rs  mod.rs  windows.rs
src/common/: cache.rs  constants.rs  cores.rs  count.rs  display.rs  mod.rs  sysconf.rs  sysctl.rs
src/common/os/: bsd.rs  haiku.rs  linux.rs  macos.rs  mod.rs  sysctl.rs  windows.rs
src/cpuid/: brand.rs  cache.rs  constants.rs  count.rs  cpu.rs  cyrix.rs  display.rs  dos.rs  dump.rs  features.rs  fns.rs  micro_arch.rs  mod.rs  mp.rs  precpuid.rs  provider.rs  quirks.rs  string.rs  topology.rs
src/cpuid/dos/: allocator.rs  mod.rs  unreal.rs
src/cpuid/type_wrappers/: mod.rs  static_vec.rs  string.rs
src/ppc/: cpu.rs  fns.rs  micro_arch.rs  mod.rs
tests/: cpuid_dump_test.rs  dos_binary_size_test.rs  test_raw_cpuid.rs
tests/cpuid/dump/: 12700H.txt  2700U.txt  5900XT.txt  7950x3d.txt  M2.TXT  ODPR.TXT  UMC.TXT  W2B-DUMP.TXT  c7d.txt  p6x2.txt  sis550.TXT  vortex86dx3.txt
tests/cpuid/haiku-sysinfo/: nanox2.txt
tests/raw/: 7950x3d.txt  eeepc.txt  kx5640.txt  olpc.txt  p6x2cpuinfo.txt
tools/: dosbox-x.conf
tools/elf2le/src/: main.rs
tools/make_exe/: Cargo.toml
tools/make_exe/src/: main.rs
