[package]
name = "rustid"
version = "0.11.4"
edition = "2024"
authors = ["Timothy J. Warren <tim@timshome.page>"]
description = "A utility to identify the name and properties of the current cpu"
repository = "https://git.timshomepage.net/timw4mail/rustid.git"
license = "MIT"
default-run = "rustid"

[dependencies]

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"

# We don't need heapless anymore - we use a fixed-size array implementation

# Windows API for MP table detection
[target.'cfg(all(any(target_arch = "aarch64", target_arch = "arm64ec"), target_os = "windows"))'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_SystemInformation", "Win32_System_Registry"] }

[target.'cfg(not(any(target_os = "none", target_arch = "x86")))'.dependencies]
core_affinity = "0.8.3"

[[bin]]
name = "rustid"
path="src/rustid.rs"

[[bin]]
name = "dump"
path="src/dump.rs"

[[bin]]
name = "debug"
required-features = ["debug"]
path="src/debug.rs"

[features]
default = []
debug = []
file_mock = []
dos-build = []
