[package]
name = "rustid"
version = "1.3.0"
edition = "2024"
authors = ["Timothy J. Warren <tim@timshome.page>"]
description = "A utility to identify the name and properties of the current cpu"
repository = "https://git.timshomepage.net/timw4mail/rustid.git"
license = "MIT"
default-run = "rustid"

[dependencies]

[build-dependencies]
cfg_aliases = "0.1.0"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"

[target.'cfg(all(target_os = "windows", any(target_arch="aarch64", target_arch="arm64ec")))'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_System_SystemInformation", "Win32_System_Registry", "Win32_System_Threading"] }

[target.'cfg(not(any(target_os = "none", target_arch = "x86", target_arch ="x86_64")))'.dependencies]
core_affinity = "0.8.3"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[[bin]]
name = "rustid"
path="src/rustid.rs"

[[bin]]
name = "dos_rustid"
required-features = ["dos-build"]
path="src/dos_rustid.rs"

[[bin]]
name = "dump"
required-features = ["dos-build"]
path="src/dos_dump.rs"

[[bin]]
name = "debug"
required-features = ["debug", "dos-build"]
path="src/dos_debug.rs"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(dos)'] }

[lints.clippy]
unwrap_used = "warn"

[features]
default = []
debug = []
dos-build = []
